package springJDBC.tx;

public interface Service {
    public void purchase(String isbn, String username);

}
